<resources>
    <string name="app_name">Mevron</string>
    <string name="mevron_logo">mevron logo</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="request_a_ride_at_an_unbeatable_price_safely">Request a ride at an unbeatable price, safely.</string>
    <string name="forget_about_expensive_trips">Forget about expensive trips.</string>
    <string name="back_button">back button</string>
    <string name="hey_tell_us_your_mobile_number">Hey, tell us your mobile number</string>
    <string name="we_ll_send_a_verification_code_on_this_number">We’ll send a verification code on this number.</string>
    <string name="phone_number">Phone Number</string>
    <string name="next_button">Next Button</string>
    <string name="enter_the_verification_code_sent_to_you">Enter the verification code sent to you</string>
    <string name="we_have_sent_you_a_six_digit_code_on_your">We have sent you a six-digit code on your</string>
    <string name="resend_code">Resend code</string>
    <string name="what_s_your_name">What’s your name?</string>
    <string name="your_name_helps_drivers_to_identify_you">Your name helps drivers to identify you.</string>
    <string name="by_continuing_i_agree_to_the">By continuing, I agree to the</string>
    <string name="terms_of_use_amp_privacy_policy"><![CDATA[terms of use & privacy policy.]]></string>
    <string name="tell_us_your_email">Tell us your email?</string>
    <string name="an_email_address_lets_us_share_trip_recipts">An email address lets us share trip recipts</string>
    <string name="hey_there">Hey there,</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="search_your_destination">Search your destination</string>
    <string name="all_saved_places">All Saved Places</string>
    <string name="close_button">Close Button</string>
    <string name="start">Start</string>
    <string name="from">From</string>
    <string name="where_to">Where to?</string>
    <string name="add_stop">add stop</string>
    <string name="add_home">Add Home</string>
    <string name="add_work">Add Work</string>
    <string name="current_location">Current Location</string>
    <string name="set_location_on_the_map">Set location on the map</string>
    <string name="my_rides">My Rides</string>
    <string name="notifications">Notifications</string>
    <string name="payment">Payment</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="set_pickup_location_on_map">Set pickup location on map</string>
    <string name="pick_me_from_here">Pick me from here</string>
    <string name="set_drop_off_location_on_map">Set drop-off location on map</string>
    <string name="drop_me_here">Drop me here</string>
    <string name="choose_your_ride">Choose your ride</string>
    <string name="confirm_economy">Confirm Economy</string>
    <string name="add_a_payment_method">Add a Payment Method</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="google_pay">Google Pay</string>
    <string name="paypal">Paypal</string>
    <string name="add_a_voucher_gift_card">Add a Voucher/Gift card</string>
    <string name="pay_with_cash">Pay with Cash</string>
    <string name="choose_a_payment_method">Choose a payment method</string>
    <string name="cancel_this_ride">Cancel this ride?</string>
    <string name="saved_places">Saved Places</string>
    <string name="referral_code">Referral Code</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="logout">Logout</string>
    <string name="do_you_want_to_logout_from_this_device">Do you want to logout from this device?</string>
    <string name="add_a_new_place">Add a new Place</string>
    <string name="save_this_place">Save this place</string>
    <string name="name_this_place">Name this Place</string>
    <string name="e_g_sam_s_house">e.g. Sam’s House</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="address">Address</string>
    <string name="save_address">Save Address</string>
    <string name="update">Update</string>
    <string name="driver_is_arriving">Driver is arriving</string>
    <string name="meet_your_driver_at_the_pick_up_spot">Meet your driver at the pick-up spot</string>
    <string name="min">min</string>
    <string name="reach_the_pick_up_spot_within_5_min_to_avoid_waiting_charges">Reach the pick-up spot within 5 min to avoid waiting charges.</string>
    <string name="ride_in_progress">Ride in Progress</string>
    <string name="you_ll_reach_the_destination_by_03_24_pm">You’ll reach the destination by 03:24 PM</string>
    <string name="drop_off_at">DROP-OFF AT</string>
    <string name="emergency_assistance">Emergency assistance</string>
    <string name="once_you_call_for_assistance_your_location_and_vehicle_details_will_be_automatically_shared">Once you call for assistance, your location and vehicle details will be automatically shared.</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="you_ve_reached_your_destination">You’ve reached your destination</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="card_details">Card Details</string>
    <string name="tap_here_to_cancel_this_ride_if_rider_don_t_show_up">Tap here to cancel this ride, if rider don’t show up.</string>
    <string name="waiting_for_the_rider">Waiting for the rider</string>
    <string name="confirming_your_ride">Confirming your ride</string>
    <string name="share_the_reason_for_cancelling_the_ride">Share the reason for cancelling the ride</string>
    <string name="help_us_to_improve_the_services_better">Help us to improve the services better</string>
    <string name="inefficient_route">Inefficient Route</string>
    <string name="booked_by_mistake">Booked by mistake</string>
    <string name="change_in_plan">Change in plan</string>
    <string name="other">Other</string>
    <string name="others">others</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="your_trip_is_verified">Your trip is verified.</string>
    <string name="schedule_ride">Schedule Ride</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="your_ride_is_scheduled">Your Ride is scheduled</string>
    <string name="this_is_just_an_approximate_fare_cost_may_differ_refer_terms_amp_conditions_for_more_information"><![CDATA[This is just an approximate fare, cost may differ. Refer Terms & Conditions for more information.]]></string>
    <string name="rate_your_experience_with_the_driver">Rate your experience with the driver</string>
    <string name="add_a_tip_to_the_driver">Add a tip to the driver</string>
    <string name="we_share_the_full_tip_amount_to_the_driver">We share the full tip amount to the driver</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="update_profile">Update Profile</string>
    <string name="email_is_not_verified_check_your_mail_and_click_on">Email is not verified, check your mail and click on</string>
    <string name="verification_link_resend_link">verification link.</string>
    <string name="resend_link">Resend Link</string>
    <string name="promos">Promos</string>
    <string name="enter_code">Enter code</string>
    <string name="invite_your_friends_and_family_to_this_app_using_your_referral_code">Invite your friends and family to this app using your referral code.</string>
    <string name="no_referral_bonus_recieved">No referral bonus recieved</string>
    <string name="share_the_referral_link_to_maximum_number_of_people_once_they_joined_both_of_you_will_recieve_bonus">Share the referral link to maximum number of people, once they joined both of you will recieve bonus.</string>
    <string name="bella_doe_ride_report">Ride Report</string>
    <string name="to">To</string>
    <string name="add_a_referral_code">Add a Referral Code</string>
    <string name="java_entry_title" translatable="false">Run the ML Kit quickstart written in Java</string>
    <string name="kotlin_entry_title" translatable="false">Run the ML Kit quickstart written in Kotlin</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale" translatable="false">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on" translatable="false">Front</string>
    <string name="toggle_turn_off" translatable="false">Back</string>
    <string name="desc_camera_source_activity" translatable="false">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity" translatable="false">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity" translatable="false">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="desc_cameraxsource_demo_activity" translatable="false">Object detection with custom classifier using ML Kit CameraXSource API. Note that CameraX is only supported on API 21+</string>
    <string name="download_error" translatable="false">Download error</string>
    <string name="start_over" translatable="false">Start over</string>
    <string name="menu_item_settings" translatable="false">Settings</string>
    <string name="select_image" translatable="false">Select image</string>
    <string name="custom_object_detection" translatable="false">Custom Object Detector</string>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection" translatable="false">Pose Detection</string>
    <string name="pref_category_segmentation" translatable="false">Selfie Segmentation</string>
    <string name="pref_category_text_recognition" translatable="false">Text Recognition</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
</resources>