<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".settings.SaveAddressDetailsFragment">

    <ImageButton
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/back_button"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:contentDescription="@string/close_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_this_place"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_32sdp"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/poppins_regular"
        android:textFontWeight="500"
        android:id="@+id/state_of_location"
        tools:targetApi="p" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:textSize="@dimen/_10ssp"
        android:text="@string/name_this_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/email" />


    <EditText
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_height="60dp"
        android:layout_weight="2"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:id="@+id/address_name"
        android:hint="@string/e_g_sam_s_house"
        android:background="@drawable/rounded_corner_field"
        android:textColor="#383838"
        android:inputType="text"/>



    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_32sdp"
        app:cornerRadius="@dimen/_32sdp"
        android:background="@drawable/rounded_border_save_button"
        android:textAllCaps="false"
        android:text="@string/home"
        android:textColor="#333333"
        app:layout_constraintTop_toBottomOf="@id/address_name"
        app:layout_constraintStart_toStartOf="@id/address_name"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/home_address"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_32sdp"
        app:cornerRadius="@dimen/_32sdp"
        android:background="@drawable/rounded_border_save_button"
        android:textAllCaps="false"
        android:text="@string/work"
        android:textColor="#333333"
        android:layout_marginStart="@dimen/_18sdp"
        app:layout_constraintTop_toBottomOf="@id/address_name"
        app:layout_constraintStart_toEndOf="@id/home_address"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/work_address"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:textSize="@dimen/_10ssp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/work_address"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/add" />


    <EditText
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/add"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_height="60dp"
        android:layout_weight="2"
        tools:text="ddddddddddddddddddddddddd dddd,,d,d d d,d,d,d,"
        android:imeOptions="actionDone"
        android:focusableInTouchMode="false"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_40sdp"
        android:id="@+id/address"
        android:hint="@string/e_g_sam_s_house"
        android:background="@drawable/rounded_corner_field"
        android:textColor="#383838"
        android:inputType="textPostalAddress"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/address"
        app:layout_constraintTop_toTopOf="@id/address"
        app:layout_constraintBottom_toBottomOf="@id/address"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_pencil"
        android:id="@+id/edit_address"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        app:cornerRadius="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:id="@+id/save_address"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:text="@string/save_address"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>