<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".IntroScreenActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />


    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
      android:layout_marginStart="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_80sdp"
        android:src="@drawable/ic_mevon_log_new"
        android:contentDescription="@string/mevron_logo" />
    


    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_51sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/let_s_get_started"
        android:textColor="@color/white"
        app:background="@color/white"
        app:backgroundTint="@color/primary"
        app:cornerRadius="5dp"
        android:textAllCaps="false"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineHeight="@dimen/_20sdp"
        android:text="@string/request_a_ride_at_an_unbeatable_price_safely"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        android:layout_marginBottom="@dimen/_30sdp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        tools:targetApi="p" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineHeight="@dimen/_30sdp"
        android:text="@string/forget_about_expensive_trips"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/subtitle"
        android:layout_marginBottom="@dimen/_4sdp"
        android:textSize="@dimen/_25ssp"
        android:textColor="@color/primary"
        android:textFontWeight="600"
        android:letterSpacing="0.00001"
        android:layout_marginEnd="@dimen/_70sdp"
        android:layout_marginStart="@dimen/_16sdp"
        tools:targetApi="p" />

</androidx.constraintlayout.widget.ConstraintLayout>